[tool.poetry]
name = "finalproject-gindullina-regina-m25-555"
version = "0.1.0"
description = ""
authors = ["Regina Gindullina"]
readme = "README.md"
packages = [{include = "valutatrade_hub"}]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []